# demowebshop-tests

./: .gitignore  pyproject.toml
demowebshop_tests/: request.py
demowebshop_tests/data/: computers.py
demowebshop_tests/utils/: attach.py  logging.py
tests/: conftest.py  test_cart.py
